client/src/components/Posts/Post.css
.post-grid {
  display: flex;
  flex-flow: row wrap;
}

.post {
  font-family: "East Sea Dokdo", cursive;
  font-size: 2rem;
  display: inline-block;
  border: black solid 2px;
  border-radius: 8px;
  width: 30rem;
  height: 20rem;
  margin: 2rem auto;
}

.post h3 {
  font-size: 3rem;
  margin-bottom: -1rem;
}

.post:hover {
  transform: translateY(-0.4rem);
  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.1);
}

.post:active {
  transform: translateY(-0.1rem);
  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
}

.post:after {
  transform: scaleX(1.3) scaleY(1.3);
  opacity: 0;
}

.post-story {
  text-align: center;
  transform: translateY(3rem);
  transition: all 0.5s;
}

.post:hover .post-story {
  opacity: 0.5;
  transform: translateY(1rem);
}

.post-description {
  font-size: 1.75rem;
  text-align: center;
  transform: translate(0%, 100%);
  opacity: 0;
  transition: all 0.8s;
}

.post:hover .post-description {
  opacity: 1;
  transform: translateY(45%);
}

/* font-family: "Do Hyeon", sans-serif; */

